# diceart

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
src/diceart/: __init__.py  cli.py  convert.py  dices.py
tests/: setup.py  test_convert.py  test_dices.py
tests/testutils/: paths.py
